style entrance page for mobile landscape view and fix wierd overflow issues

--- a/client/src/ui/Entrance/entrance.scss
+++ b/client/src/ui/Entrance/entrance.scss
@@ -68,7 +68,7 @@ $dark-test: #1d1711a1;
         form {
             display: flex;
             flex-direction: column;
-            flex-wrap: wrap;
+            // flex-wrap: wrap;
             justify-content: start;
             align-content: flex-start;
             // flex-grow:1;
@@ -154,6 +154,7 @@ $dark-test: #1d1711a1;
                 }
             }
             .save {
+                min-height: fit-content;
                 border: m.$border;
                 border-radius: m.$border-radius;
                 height: 8.5vh;
@@ -198,6 +199,7 @@ $dark-test: #1d1711a1;
                     width: 100%;
                     height: 100%;
                     .text {
+                        max-height: -webkit-fill-available;
                         background-color: m.$mid-green;
                         margin-left: 1rem;
                         padding-left: 2rem;
@@ -257,7 +259,8 @@ $dark-test: #1d1711a1;
         }
         .user-form{
             form {
-                flex-direction: row;
+                // flex-direction: row;
+                flex-wrap: nowrap;
                 .username {
                     // height: 4.5rem;
                     min-height: 2.3rem;
@@ -268,7 +271,7 @@ $dark-test: #1d1711a1;
                 }
                 .rating {
                     width: 100%;
-                    flex-grow:0;
+                    // flex-grow:0;
                     .rating-menu {
                         padding: .25rem;
                         margin-right: 1rem;
@@ -304,8 +307,26 @@ $dark-test: #1d1711a1;
                 min-height: 3rem !important;
                 // font-size: 2.4rem;
             }
+
+            form {
+                flex-direction: column !important;
+                .rating .rating-menu{
+                    flex-direction: row;
+                    flex-wrap: nowrap;
+                    letter-spacing: 0rem;
+                    padding: 0px;
+                    .rating-option{
+                        margin: 0rem;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                    }
+                }
+            }
         }
     }
+
+
 }
 // @media (min-aspect-ratio: 3/2) {
 //     .user-form {
